--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,9 +1,19 @@
 ---
-layout: page
+layout: default
+title: 404 Not Found
 permalink: /404.html
-title: "Page not found"
-description: "Looks like there has been a mistake. Nothing exists here."
-redirect: true
 ---
 
-You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
+<h1>404 — Page not found</h1>
+
+<p>Sorry, the page you’re looking for doesn’t exist.</p>
+
+<ul>
+  <li><a href="{{ '/' | relative_url }}">Back to Home</a></li>
+  <li><a href="{{ '/blog/' | relative_url }}">Blog</a> (if enabled)</li>
+</ul>
+
+<hr>
+
+<p>If you expected a bibliography here, it was removed to be compatible with GitHub Pages’ default build.  
+Use plain Markdown links instead of <code>{% raw %}{% bibliography %}{% endraw %}</code> or switch to a custom Actions build to enable plugins.</p>
